ensuring basic functionality

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <script src="app.js" defer></script>
   </head>
   <body>
+    <div id="gameMessage">Snake</div>
     <div id="board"></div>
     <button id="game-start">Start Game</button>
-    <button id="restart">Restart</button>
+    <button id="game-restart">Restart</button>
     <select id="gameDifficulty">
       <option value="easy">Easy</option>
       <option value="medium">Medium</option>
